test/asm/skip-expansions.err
error: skip-expansions.asm(31) -> skip-expansions.asm::mac2(21):
    Macro argument '\1' not defined
error: skip-expansions.asm(31) -> skip-expansions.asm::mac2(21):
    syntax error, unexpected (
error: skip-expansions.asm(31) -> skip-expansions.asm::mac2(21):
    Macro argument '\2' not defined
Assembly aborted with 3 errors!
